--- a/.github/workflows/publish-to-dockerhub.airflow.yml
+++ b/.github/workflows/publish-to-dockerhub.airflow.yml
@@ -3,7 +3,7 @@ name: Publish DockerHub
 on:
   push:
     tags:
-      - "airflow-clickhouse-v*.*.*"
+      - "airflow-v*.*.*"
 
 jobs:
   docker:
@@ -29,9 +29,9 @@ jobs:
         run: |
           SEM_VER=$(echo ${{ steps.version_info.outputs.SOURCE_TAG }} | grep -o '[0-9]\+\.[0-9]\+\.[0-9]\+')
           echo ::set-output name=SEM_VER::$SEM_VER
-      - name: Build and push airflow-clickhouse
+      - name: Build and push airflow
         uses: docker/build-push-action@v4
         with:
-          context: "{{defaultContext}}:docker/airflow-clickhouse"
+          context: "{{defaultContext}}:docker/airflow"
           push: true
-          tags: octanlabs/airflow-clickhouse:latest, octanlabs/airflow-clickhouse:${{ steps.sem_ver.outputs.SEM_VER }}
+          tags: octanlabs/airflow:latest, octanlabs/airflow:${{ steps.sem_ver.outputs.SEM_VER }}
