--- a/docker/l2s/package.json
+++ b/docker/l2s/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "ethers": "^6.7.1",
     "pg": "^8.11.3",
+    "pg-format": "^1.0.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
