--- a/docker/l2s/package.json
+++ b/docker/l2s/package.json
@@ -19,5 +19,8 @@
     "pg-format": "^1.0.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.7.1"
   }
 }
