fix:  update query

--- a/docker/l2s/.env.example
+++ b/docker/l2s/.env.example
@@ -1,6 +1,10 @@
 ETH_RPC_URL=
 MULTICALL_CONTRACT_ADDRESS=
 BLOCK_NUMBER=
+CLICKHOUSE_HOST=
+CLICKHOUSE_PASSWORD=
+CLICKHOUSE_DATABASE=
+CLICKHOUSE_USER=
 POSTGRES_HOST=
 POSTGRES_PORT=
 POSTGRES_DATABASE=
