--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ spark-3.3.2-bin-hadoop3/**/*
 .vscode/**/*
 .metals/**/*
 !.vscode/launch.json
-/docker/.DS_Store
+docker/.DS_Store
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
